--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.39",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
