--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.22.0",
+    "axios": "^0.25.0",
+    "faunadb": "^4.5.2",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
@@ -18,10 +21,9 @@
     "stripe": "^8.202.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.39",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   }
