--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^6.2.0",
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "faunadb": "^4.5.2",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^17.0.14",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.39",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
